@@ -3,6 +3,7 @@ LATEST SNAPSHOT
 - allow schema generation without open connection
 - added DbColJson
 - added DbColVarchar.setValueRestriction()
+- allow to keep text representation for DbColGeometry bounding box (min,max1..3)
 
 ehisqlgen 1.13.6 (2018-09-05)
 ---------------------------
